# algorithmProject

./: README.md
Ex1/: CMakeLists.txt  setup.sh  unattended.sh
Ex1/libs/arrayCreator/: CMakeLists.txt  CSVread.c  CSVread.h
Ex1/libs/sort/: CMakeLists.txt  sort.c  sort.h
Ex1/src/: ex1.c  tests.c  unattended.c
Ex2/: CMakeLists.txt  setup.sh
Ex2/libs/skiplist/: CMakeLists.txt  skiplist.c  skiplist.h
Ex2/src/: main_ex2.c  main_ex2.h  tests.c
Ex3/: compile.sh
Ex3/src/heap/: Heap.java  IntegerHeapTests.java  IntegerHeapTestsRunner.java
Ex4/: compile.sh
Ex4/src/graph/: Dijkstra.java  DijkstraData.java  Edge.java  Graph.java  GraphException.java  Node.java  StringGraphTests.java  StringGraphTestsRunner.java
Ex4/src/heap/: HeapException.java
